High contrast dropdown menu fixes (#10880)
* Ensure items in the menu dropdown don't change foreground color on hover and do have the expected hover border in high contrast mode. Moved some css into overrides file as a part of this.

* Do not focus on first item in the menu dropdown. This causes highlighting that can be confusing in high contrast mode.

* Remove unused code

* Add explanation for overflow: visible

* Fix focus outline visibility by moving outline in (instead of messing with overflow)

* Position adjustment no longe rnecessary with outline inset

--- a/theme/color-themes/overrides/high-contrast-overrides.css
+++ b/theme/color-themes/overrides/high-contrast-overrides.css
@@ -206,3 +206,12 @@ div.field .ui.toggle.checkbox input:checked~label:before {
     color: #000000 !important;
 }
 
+/*
+ * Dropdown Menu
+ */
+.common-menu-dropdown-item:hover,
+.common-menu-dropdown > .menu-button.expanded {
+    outline: var(--pxt-focus-border) solid 3px !important;
+    outline-offset: -4px;
+    z-index: 1;
+}
